# bean_archive_stats_scraper

./: .gitignore  Cargo.toml  EXAMPLE-bean_archive_stats_scraper.service  EXAMPLE-config.toml  Readme.md
.github/workflows/: rust.yml
src/: main.rs  parse.rs  request.rs
src/bot/: mod.rs  send_msgs.rs
src/config/: mod.rs  state.rs
src/scraper/: datetime_parts.rs  parse.rs  request.rs  timer.rs
