[package]
name = "bean_archive_stats_scraper"
version = "0.1.0"
edition = "2024"

[dependencies]
chrono = "0.4.39"
reqwest = { version = "0.12.12", features = ["json"] }
scraper = "0.22.0"
serde = "1.0.217"
serenity = "0.12.4"
shared_singleton = { version = "0.2.1", features = ["tokio"] }
tokio = { version = "1.42.0", features = ["full"] }
toml = "0.8.19"
